# OTUS-CPP-Professional-HomeWork_1_GTest

./: CMakeLists.txt  README.md  main.cpp  test_version.cpp
.github/workflows/: release.yml
